# qdrant_db

./: .gitignore  README.md  pyproject.toml
vector_db/: qdrant_db.py  test.ipynb
