[tool.poetry]
name = "qdrant-db"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
langchain = "^0.3.8"
qdrant-client = "^1.12.1"
langchain-qdrant = "^0.2.0"
langchain-community = "^0.3.8"
datasets = "^3.1.0"
sentence-transformers = "^3.3.1"
fastembed = "^0.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
